# i-use-rust-btw

./: Cargo.toml  README.md
git-clone-bare/: Cargo.toml
git-clone-bare/src/: main.rs
git-new/: Cargo.toml
git-new/src/: main.rs
hypr-focus/: Cargo.toml
hypr-focus/src/: main.rs
hypr-prop/: Cargo.toml
hypr-prop/src/: main.rs
i3-focus/: Cargo.toml  README.md
i3-focus/src/: lib.rs  main.rs  nvim.rs  tmux.rs  wezterm.rs  zellij.rs
i3-prop/: Cargo.toml
i3-prop/src/: main.rs
niri-focus/: Cargo.toml
niri-focus/src/: main.rs
niri-layout-czar/: Cargo.toml
niri-named-workspace/: Cargo.toml
niri-named-workspace/src/: main.rs
niri-prop/: Cargo.toml
niri-prop/src/: main.rs
niri-start-maximized/: Cargo.toml
niri-start-maximized/src/: main.rs
nvim-lsp-log/: Cargo.toml
nvim-lsp-log/src/: main.rs
nvru/: Cargo.toml
nvru/src/: main.rs  nvim.rs
sway-focus/: Cargo.toml
sway-focus/src/: main.rs
sway-prop/: Cargo.toml
sway-prop/src/: main.rs
sway-workspace/: Cargo.toml
sway-workspace/src/: main.rs
tmux-kill-idle-sessions/: Cargo.toml
tmux-kill-idle-sessions/src/: main.rs
tmux-session-name/: Cargo.toml
tmux-session-name/src/: main.rs
wezterm-project/: Cargo.toml
wezterm-project/src/: main.rs
wezterm-status/: Cargo.toml
wezterm-status/src/: main.rs
zellij-session-name/: Cargo.toml
zellij-session-name/src/: main.rs
