[workspace]
members = [
  "git-new",
  "git-clone-bare",
  "hypr-focus",
  "hypr-prop",
  "i3-focus",
  "i3-prop",
  "niri-focus",
  "nvru",
  "sway-focus",
  "sway-prop",
  "sway-workspace",
  "tmux-kill-idle-sessions",
  "tmux-session-name",
  "wezterm-project",
  "wezterm-status",
  "zellij-session-name"
, "nvim-lsp-log"]
